<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Administrator">

    <Button
        android:id="@+id/btn_add_teacher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/str_add_teacher"
        android:textStyle="normal"
        android:textSize="24dp"
        android:layout_marginBottom="32dp"/>


    <Button
        android:id="@+id/btn_add_student"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/str_add_student"
        android:textStyle="normal"
        android:textSize="24dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btn_add_course"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/str_add_course"
        android:textStyle="normal"
        android:textSize="24dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btn_delete_all_entries"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>