<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterCourses">

    <!--Adding the code-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="26dp"
            android:text="@string/str_course_code_register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/course_code"
            android:layout_width="260dp"
            android:layout_height="26dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666"
            tools:layout_editor_absoluteX="98dp"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>

    <!--Adding the name-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:text="@string/str_course_name_register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/course_name"
            android:layout_width="260dp"
            android:layout_height="26dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666"
            tools:layout_editor_absoluteX="98dp"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>

    <!--Register Button-->
    <Button
        android:id="@+id/btn_register_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/str_register"/>

</LinearLayout>